--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.10.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "class": "^0.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "openai": "^5.8.0",
